# spaceship-generator

./: CMakeLists.txt  LICENSE  README.md
data/: vehicle_parts_additional.txt
src/: main.cpp
